--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <title>Trutru Burgers</title>
   </head>
-  <body>
+  <body class="bg-body">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
